--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/dbcostandemo
 
 spring.datasource.username = root
-spring.datasource.password = costan
-
+spring.datasource.password = root
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
 
